--- a/package.json
+++ b/package.json
@@ -1,17 +1,45 @@
 {
   "name": "healthhub",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A web application for managing health records.",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "client": "cd client && ng serve",
+    "dev": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client\""
   },
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "ng2-charts": "^3.0.0",
+    "rxjs": "^7.4.0",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.4",
+    "@angular/cli": "~13.2.4",
+    "@angular/compiler-cli": "~13.2.2",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^16.11.16",
+    "concurrently": "^7.0.0",
+    "jasmine-core": "~3.10.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.9",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.4.0",
+    "typescript": "~4.5.4"
   }
 }
